welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:7: error: reassignment to val
			compteur = compteur + 1;
                                 ^