welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur = 0

do {
	for (compteur <- 1 to 5) {
		avance ()
		if (estSurBiscuit) {
			compteur = compteur + 1;
		}
	}
} while (!croisement)
